--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -4,11 +4,21 @@
   grid-column-gap: 1rem;
   align-items: start;
   width: 100%;
-  margin: 1rem 0;
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (max-width: 1200px) {
+    grid-template-columns: 25% 75%;
+  }
+  @media only screen and (max-width: 992px) {
+    grid-template-columns: 25% 75%;
+  }
+  @media only screen and (max-width: 768px) {
     grid-template-columns: 100%;
   }
-  @media (min-width: 481px) and (max-width: 767px) {
+  /* Extra Small Devices, Phones */
+  @media only screen and (max-width: 480px) {
+    grid-template-columns: 100%;
+  }
+  /* Custom, iPhone Retina */
+  @media only screen and (max-width: 320px) {
     grid-template-columns: 100%;
   }
 }
@@ -24,7 +34,7 @@
 }
 .explorer {
   background: #fff;
-  border-radius: 10px;
+  border-radius: 5px;
   border: 1px solid #ddd;
   width: 100%;
   position: relative;
@@ -43,25 +53,27 @@ header {
   .header-wrapper {
     width: 100%;
     display: grid;
-    grid-template-columns: 4fr 2fr 2fr 2fr;
+    grid-template-columns: 45% 20% 20% auto;
+    @media (min-width: 768px) and (max-width: 1024px) {
+      grid-template-columns: 50% 30% auto;
+    }
+    @media (min-width: 481px) and (max-width: 767px) {
+      grid-template-columns: 50% 30% auto;
+    }
+    @media (min-width: 320px) and (max-width: 480px) {
+      grid-template-columns: 50% 30% auto;
+    }
     list-style-type: none;
     margin: 0;
     padding: 0.75rem 0;
     border-bottom: 1px solid #007ee5;
-    border-top: 1px solid #007ee5;
-    @media (min-width: 768px) and (max-width: 1024px) {
-      grid-template-columns: 5fr 2fr 1fr;
-    }
-    @media (min-width: 481px) and (max-width: 767px) {
-      grid-template-columns: 5fr 2fr 1fr;
-    }
-
     li {
       text-transform: capitalize;
       font-size: 0.9rem;
       font-weight: bold;
       text-align: left;
-      padding-left: 1rem;
+      padding-left: 0.5rem;
+      justify-self: left;
       color: #007ee5;
       &.name {
         flex: 2;
@@ -71,13 +83,15 @@ header {
       }
       &.modified {
         flex: 1;
-        @media (min-width: 768px) and (max-width: 1024px) {
+        @media (min-width: 320px) and (max-width: 480px) {
           display: none;
         }
         @media (min-width: 481px) and (max-width: 767px) {
           display: none;
         }
-        
+        @media (min-width: 768px) and (max-width: 1024px) {
+          display: none;
+        }
       }
       &.empty {
         flex: 1;
@@ -106,14 +120,8 @@ header {
   background: #b3b3b3;
 }
 .tree-view-wrapper {
-  @media (min-width: 768px) and (max-width: 1024px) {
-    display: none;
-  }
-  @media (min-width: 481px) and (max-width: 767px) {
-    display: none;
-  }
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
