--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,24 +1,32 @@
 .explorer-container {
   display: grid;
-  grid-template-columns: 25% 75%;
-  grid-column-gap: 1rem;
+  grid-template-columns: 30% 70%;
+  grid-column-gap: 0.5rem;
   align-items: start;
   width: 100%;
-  @media only screen and (max-width: 1200px) {
+  @media only screen and (min-width: 1224px) {
     grid-template-columns: 25% 75%;
+    grid-column-gap: 0.75rem;
+  }
+
+  @media only screen and (min-width: 1824px) {
+    grid-column-gap: 0.75rem;
+    grid-template-columns: 15% 85%;
   }
   @media only screen and (max-width: 992px) {
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 36% 64%;
   }
   @media only screen and (max-width: 768px) {
     grid-template-columns: 100%;
   }
   /* Extra Small Devices, Phones */
   @media only screen and (max-width: 480px) {
+    grid-column-gap: 0rem;
     grid-template-columns: 100%;
   }
   /* Custom, iPhone Retina */
   @media only screen and (max-width: 320px) {
+    grid-column-gap: 0rem;
     grid-template-columns: 100%;
   }
 }
@@ -50,6 +58,8 @@
 header {
   width: 100%;
   position: relative;
+  margin: 0;
+
   .header-wrapper {
     width: 100%;
     display: grid;
