--- a/ui/src/components/login.scss
+++ b/ui/src/components/login.scss
@@ -8,7 +8,7 @@
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.25);
   width: 100%;
 }
-header {
+header.app-title {
   font-size: 1.75rem;
   font-weight: 500;
   margin-bottom: 1rem;
