--- a/ui/src/components/Explorer/explorer-lineitem.scss
+++ b/ui/src/components/Explorer/explorer-lineitem.scss
@@ -97,7 +97,7 @@
     .resource {
       margin-left: 0.5rem;
       font-weight: 500;
-      max-width: 350px;
+      // max-width: 350px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -105,6 +105,11 @@
         color: #007ee5;
         font-weight: 500;
         text-decoration: none;
+      }
+      .file-link {
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
     .loader-wrapper {
