--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -8,7 +8,6 @@
     grid-template-columns: 25% 75%;
     grid-column-gap: 0.75rem;
   }
-
   @media only screen and (min-width: 1824px) {
     grid-column-gap: 0.75rem;
     grid-template-columns: 15% 85%;
@@ -55,7 +54,7 @@
 .explorer-content {
   min-height: 350px;
 }
-header {
+header.explorer-header {
   width: 100%;
   position: relative;
   margin: 0;
@@ -138,13 +137,14 @@ header {
   justify-content: center;
   padding: 0.25rem;
   overflow-x: auto;
-  header {
+  .tree-view-header {
     font-weight: 500;
     font-size: 1rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     width: 100%;
+    margin: 0;
     margin-bottom: 0.5rem;
     color: #007ee5;
     span {
