--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -46,7 +46,7 @@ img {
     padding: 0.2rem;
     text-align: left;
     display: block;
-    &.title {
+    &.mvcopy-summary-title {
       font-weight: bold;
       color: #000;
     }
