--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -16,7 +16,6 @@
   }
   padding: 0.5rem;
   margin-bottom: 1rem;
-  /* flex-wrap: wrap; */
   margin: 0.5rem 0;
   &:nth-child(2) {
     margin-left: auto;
@@ -25,9 +24,11 @@
     margin-right: auto;
   }
 }
+
 .toolbar-buttons {
   display: grid;
-  grid-template-columns: 110px 125px 140px 400px;
+  column-gap: 1rem;
+  grid-template-columns: 100px 120px 130px 400px;
   @media (min-width: 481px) and (max-width: 767px) {
     grid-template-columns: 120px 140px 140px;
   }
@@ -49,7 +50,6 @@
 }
 .searchbox-container-desk {
   display: block;
-  margin-left: 2rem;
   @media (min-width: 481px) and (max-width: 767px) {
     display: none;
   }
