--- a/ui/src/components/loader.scss
+++ b/ui/src/components/loader.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  top: 20%;
   top: 50%;
   transform: translateY(-50%);
   left: 0;
