--- a/ui/src/components/Path/folderpath.scss
+++ b/ui/src/components/Path/folderpath.scss
@@ -1,6 +1,5 @@
 .path-wrapper {
-  border-radius: 25px;
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem;
   .path {
     list-style-type: none;
     display: flex;
