--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -53,7 +53,10 @@ img {
     align-items: center;
     font-size: 1.25rem;
     border-radius: 4px;
-    border: 2px solid #ddd;
+    border: 1px solid transparent;
+    &:hover {
+      border: 1px solid #ddd;
+    }
 
     &.selected {
       border: 2px solid #007ee5;
