--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -1,6 +1,9 @@
 .toolbar-wrapper {
   display: grid;
-  grid-template-rows: 30px;
+  grid-template-rows: 35px;
+  padding: 0.5rem 1rem;
+  // margin-bottom: 1rem;
+  // margin: 0.5rem 0;
   @media (min-width: 768px) and (max-width: 1024px) {
     grid-template-rows: 30px 70px;
   }
@@ -14,9 +17,6 @@
     grid-template-rows: 30px 70px;
     grid-gap: 1.5rem;
   }
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  margin: 0.5rem 0;
   &:nth-child(2) {
     margin-left: auto;
   }
@@ -29,6 +29,7 @@
   display: grid;
   column-gap: 1rem;
   grid-template-columns: 100px 120px 130px 400px;
+  grid-template-rows: 40px;
   @media (min-width: 481px) and (max-width: 767px) {
     grid-template-columns: 120px 140px 140px;
   }
