--- a/ui/src/components/Explorer/explorer-lineitem.scss
+++ b/ui/src/components/Explorer/explorer-lineitem.scss
@@ -1,16 +1,16 @@
 .explorer-line-item {
   display: grid;
-  grid-template-columns: 45% 20% 20% auto;
+  grid-template-columns:50px 45% 20% 20% auto;
   grid-template-rows: 2rem;
-  padding: 0.75rem 0.25rem;
+  padding: 1rem 0.25rem;
   @media (min-width: 768px) and (max-width: 1024px) {
-    grid-template-columns: 45% 30% auto;
+    grid-template-columns: 50px 45% 30% auto;
   }
   @media (min-width: 481px) and (max-width: 767px) {
-    grid-template-columns: 45% 30% auto;
+    grid-template-columns: 50px 45% 30% auto;
   }
   @media (min-width: 320px) and (max-width: 480px) {
-    grid-template-columns: 45% 35% auto;
+    grid-template-columns: 50px 45% 35% auto;
   }
 
   .popdown-container {
@@ -53,7 +53,7 @@
       }
     }
     &.controls {
-      justify-self: right;
+      justify-self: center;
     }
 
     button {
