--- a/ui/src/components/Path/folderpath.scss
+++ b/ui/src/components/Path/folderpath.scss
@@ -1,5 +1,6 @@
 .path-wrapper {
   padding: 0.25rem;
+  padding-left: 0.5rem;
   .path {
     list-style-type: none;
     display: flex;
@@ -9,16 +10,22 @@
     flex-wrap: wrap;
     margin:0;
     padding: 0.2rem 0.25rem;
-    // background: rgba(0, 126, 229, 0.1);
     border-radius: 20px;
   }
   .path-slash {
     margin: 0 0.25rem;
     color: #007ee5;
+    width: 1.1rem;
+    height: 1.1rem;
+  }
+  .path-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .path-item {
     text-transform: capitalize;
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: bold;
     a {
       text-decoration: none;
