--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -4,6 +4,7 @@
   grid-column-gap: 1rem;
   align-items: start;
   width: 100%;
+  padding: 1rem;
   @media only screen and (min-width: 1224px) {
     grid-template-columns: 25% 75%;
     grid-column-gap: 1rem;
@@ -62,15 +63,15 @@ header.explorer-header {
   .header-wrapper {
     width: 100%;
     display: grid;
-    grid-template-columns: 50px 45% 20% 20% auto;
+    grid-template-columns: 40px 45% 20% 20% auto;
     @media (min-width: 768px) and (max-width: 1024px) {
-      grid-template-columns: 50px 50% 30% auto;
+      grid-template-columns: 40px 50% 30% auto;
     }
     @media (min-width: 481px) and (max-width: 767px) {
-      grid-template-columns: 50px 50% 30% auto;
+      grid-template-columns: 40px 50% 30% auto;
     }
     @media (min-width: 320px) and (max-width: 480px) {
-      grid-template-columns: 50px 50% 30% auto;
+      grid-template-columns: 40px 50% 30% auto;
     }
     list-style-type: none;
     margin: 0;
