--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -21,7 +21,7 @@ button {
     padding: 0.5rem 0.5rem;
     .label {
       color: #fff;
-      font-size: 0.95rem;
+      font-size: 1rem;
     }
   }
   &.rounded {
@@ -64,6 +64,9 @@ button {
     border: 2px solid #ddd;
     color: rgba(0, 0, 0, 0.5);
     cursor: auto;
+    .label {
+      color: #fff;
+    }
   }
   &.icon {
     padding: 0.1rem;
@@ -99,6 +102,9 @@ button {
     background: #cb2431;
     color: #fff;
     border: 1px solid #cb2431;
+    .label {
+      color: #fff;
+    }
   }
   i {
     width: 1.25rem;
