--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -88,6 +88,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        border: none;
       }
       .file-size {
         font-size: 1rem;
