--- a/ui/src/components/ContextActions/context-control.scss
+++ b/ui/src/components/ContextActions/context-control.scss
@@ -1,8 +1,8 @@
 .context-menu {
   list-style: none;
   margin: 0;
-  padding: 0.25rem;
-  color: #000;
+  // padding: 0.25rem;
+  color: #2B2D42;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   
   .ctx-menu-item {
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: flex-start;
     font-size: 0.9rem;
-    font-weight: normal;
+    font-weight: 700;
 
     &:first-child {
       border-top-left-radius: 5px;
@@ -23,14 +23,15 @@
       border-bottom-right-radius: 5px;
     }
     &:hover {
-      background: rgba(0, 126, 229, 0.2);
+      background: rgba(0,0,0,0.1);
+      // background: #8D99AE;
     }
     span {
       margin-left: 0.5rem;
     }
     i {
-      width: 1.75rem;
-      height: 1.75rem;
+      width: 2rem;
+      height: 2rem;
       margin-left: 0.5rem;
       margin-right: 0.5rem;
       img {
