--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -15,8 +15,10 @@
   .drop-zone {
     height: 200px;
     width: 100%;
-    background: rgba(0, 126, 229, 0.3);
-    border: 2px dashed rgba(0, 126, 229, 0.5);
+    // background: rgba(0, 126, 229, 0.3);
+    background: #EDF2F4;
+    // border: 2px dashed rgba(0, 126, 229, 0.5);
+    border: 2px dashed #8D99AE;
     border-radius: 4px;
     position: relative;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -102,7 +104,7 @@
   }
   .intro-message {
     font-size: 2rem;
-    color: #fff;
+    color: #8D99AE;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
