--- a/ui/src/components/loader.scss
+++ b/ui/src/components/loader.scss
@@ -43,7 +43,7 @@
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #007ee5;
+  background: #EF233C;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
