--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -7,7 +7,7 @@
   .popup-header {
     width: 100%;
     // border-bottom: 1px solid #EF233C;
-    background: #EDF2F4;
+    // background: #8D99AE;
     border-radius: 4px;
     margin: 0;
     margin-bottom: 1rem;
