--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -43,12 +43,14 @@
 .explorer {
   background: #fff;
   border-radius: 5px;
-  border: 3px solid #EDF2F4;
+  // border: 3px solid #EDF2F4;
+  border: 2px solid #2B2D42;
   width: 100%;
   position: relative;
   .line-item-wrapper {
     &:nth-child(odd) {
-      background: rgba(0, 0, 0, 0.02);
+      // background: rgba(0, 0, 0, 0.02);
+      background: rgba(237, 242, 244, 0.5);
     }
   }
 }
@@ -59,7 +61,8 @@ header.explorer-header {
   width: 100%;
   position: relative;
   margin: 0;
-  background: #EDF2F4;
+  // background: #EDF2F4;
+  background: #2B2D42;
   .header-wrapper {
     width: 100%;
     display: grid;
@@ -85,7 +88,7 @@ header.explorer-header {
       padding-left: 0.75rem;
       justify-self: left;
       align-self: center;
-      color: #2B2D42;
+      color: #EDF2F4;
       position: relative;
       width: 100%;
       &.control {
@@ -135,13 +138,15 @@ header.explorer-header {
   border-radius: 5px;
 }
 .tree-view-wrapper {
-  border: 3px solid #EDF2F4;
+  // border: 1px solid #EDF2F4;
+  border: 2px solid #2B2D42;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   overflow-x: auto;
+  background: #fff;
   .tree-view-header {
     font-weight: 500;
     font-size: 1rem;
@@ -152,10 +157,11 @@ header.explorer-header {
     width: 100%;
     margin: 0;
     margin-bottom: 1rem;
-    color: #2B2D42;
+    color: #EDF2F4;
     padding: 0.2rem 0;
     border-bottom: 1px solid #8D99AE;
-    background: #EDF2F4;
+    // background: #EDF2F4;
+    background: #2B2D42;
     span {
       padding: 0.5rem 0.5rem;
       width: 100%;
