--- a/ui/src/components/Treeview/treeview.scss
+++ b/ui/src/components/Treeview/treeview.scss
@@ -33,6 +33,7 @@
     padding: 0.25rem;
     font-size: 0.9rem;
     .node-text {
+      color: #2B2D42;
       height: 100%;
       width: 100%;
       padding: 0.25rem;
