--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -72,6 +72,7 @@ button {
     padding: 0.1rem;
     margin: 0;
     background: transparent;
+    border: none;
     i {
       width: 1.25rem;
       height: 1.25rem;
