--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -37,6 +37,7 @@
   .del-folder-loader-wrapper {
     margin-right: auto;
     position: relative;
+    align-self: normal;
   }
   img {
     max-height: 100%;
