--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -36,6 +36,10 @@ img {
       margin-left: 1rem;
     }
   }
+  .stage2-loader-wrapper {
+    margin-right: auto;
+    align-self: normal;
+  }
 }
 .selected-src {
   font-size: 1rem;
