--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -55,12 +55,12 @@ img {
     border-radius: 4px;
     border: 1px solid #ddd;
     &:hover {
-      border: 1px solid #007ee5;
+      border: 1px solid #2B2D42;
     }
 
     &.selected {
-      border: 2px solid #007ee5;
-      color: #007ee5;
+      border: 2px solid #2B2D42;
+      color: #2B2D42;
       background: #fff;
     }
 
