updated readme + ui changes

--- a/ui/src/components/Explorer/explorer-lineitem.scss
+++ b/ui/src/components/Explorer/explorer-lineitem.scss
@@ -26,21 +26,21 @@
       // text-align: left;
       justify-self: left;
       flex: 2;
-      font-size: 0.9rem;
+      font-size: 1rem;
       width: 100%;
       padding: 0 0.5rem;
     }
     &.size {
       flex: 1;
       justify-self: left;
-      font-size: 0.9rem;
+      font-size: 1rem;
       font-weight: 500;
     }
     &.last-modified {
       flex: 1;
       justify-self: left;
       // text-align: left;
-      font-size: 0.9rem;
+      font-size: 1rem;
       font-weight: 500;
       @media (min-width: 768px) and (max-width: 1024px) {
         display: none;
@@ -102,7 +102,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       .folder-link {
-        color: #007ee5;
+        color: #5A626F;
         font-weight: 500;
         text-decoration: none;
       }
