--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -65,6 +65,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  padding-left: 0.5rem;
 
   span {
     display: block;
@@ -117,6 +118,7 @@
 .crt-folder-loader-wrapper {
   margin-right: auto;
   position: relative;
+  align-self: normal;
 }
 img {
   max-height: 100%;
