--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -6,11 +6,19 @@
   outline: none;
   .popup-header {
     width: 100%;
-    // border-bottom: 1px solid #EF233C;
-    // background: #8D99AE;
     border-radius: 4px;
     margin: 0;
     margin-bottom: 1rem;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -0.5rem;
+      width: 100%;
+      height: 1px;
+      background: #EDF2F4;
+      left: 0;
+    }
     .popup-title {
       display: block;
       font-weight: bold;
@@ -35,6 +43,15 @@
     min-width: 400px;
     position: relative;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.25);
+    &::before {
+      content: "";
+      position: absolute;
+      width: 0.25rem;
+      height: 3.75rem;
+      background: #EF233C;
+      left: 0;
+      top: 0;
+    }
   }
   .popup-content {
     width: 100%;
