--- a/ui/src/components/Explorer/line-item-popdown.scss
+++ b/ui/src/components/Explorer/line-item-popdown.scss
@@ -6,6 +6,7 @@
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 0.9rem;
   font-weight: 700;
+  padding: 0;
 
   li {
     width: 100%;
