--- a/ui/src/components/ContextActions/context-control.scss
+++ b/ui/src/components/ContextActions/context-control.scss
@@ -1,7 +1,7 @@
 .context-menu {
   list-style: none;
   margin: 0;
-  // padding: 0.25rem;
+  padding: 0px;
   color: #2B2D42;
   
   .ctx-menu-item {
@@ -30,8 +30,8 @@
       margin-left: 0.5rem;
     }
     i {
-      width: 2rem;
-      height: 2rem;
+      width: 1rem;
+      height: 1rem;
       margin-left: 0.5rem;
       margin-right: 0.5rem;
       img {
