--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -7,18 +7,18 @@
   width: 100%;
 
   label {
-    font-weight: bold;
+    font-weight: 700;
     margin-bottom: 0.5rem;
     font-size: 0.9rem;
   }
   input[type="text"] {
     border-radius: 3px;
-    border: 1px solid #007ee5;
+    border: 1px solid #2B2D42;
     padding: 0.5rem 0.4rem;
     width: 80%;
     outline: none;
     font-size: 1rem;
-    color: #007ee5;
+    color: #2B2D42;
 
   }
 }
