--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -8,17 +8,19 @@
       display: block;
       padding-left: 0.5rem;
       margin: 0.5rem 0;
-      font-weight: bold;
+      font-weight: 700;
     }
   }
 }
-.explorer-wrapper {
+.stage3-explorer-wrapper {
   overflow: auto;
   border-radius: 3px;
   border: 1px solid #ddd;
   margin: 1rem 0;
   padding-top: 0.5rem;
   padding-left: 0.5rem;
+  height: 400px;
+  overflow: auto;
 }
 img {
   max-height: 100%;
@@ -47,11 +49,11 @@ img {
     text-align: left;
     display: block;
     &.mvcopy-summary-title {
-      font-weight: bold;
+      font-weight: 700;
       color: #000;
     }
     &.value {
-      font-weight: bold;
+      font-weight: 700;
       font-weight: normal;
       color: #007ee5;
       word-break: break-all;
