--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -8,11 +8,11 @@
       display: block;
       padding-left: 0.5rem;
       margin: 0.5rem 0;
-      font-weight: bold;
+      font-weight: 700;
     }
   }
 }
-.explorer-wrapper {
+.stage2-explorer-wrapper {
   /* height: 300px; */
   overflow: auto;
   margin-top: 1rem;
@@ -20,6 +20,8 @@
   border-radius: 3px;
   padding-left: 1rem;
   padding-top: 1rem;
+  height: 400px;
+  overflow: auto;
 }
 img {
   max-height: 100%;
@@ -56,7 +58,7 @@ img {
     word-break: break-all;
     text-align: left;
     min-height: 40px;
-    font-weight: bold;
+    font-weight: 700;
     color: #007ee5;
   }
 }
