--- a/ui/src/components/Path/folderpath.scss
+++ b/ui/src/components/Path/folderpath.scss
@@ -26,7 +26,7 @@
   .path-item {
     text-transform: capitalize;
     font-size: 1rem;
-    font-weight: bold;
+    font-weight: 700;
     a {
       text-decoration: none;
       color: #007ee5;
