--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -65,12 +65,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      background: linear-gradient(
-        to bottom,
-        rgba(73, 155, 234, 1) 0%,
-        rgba(32, 124, 229, 1) 100%
-      );
-      border: 1px solid #ddd;
+      background: linear-gradient(135deg, rgba(237,242,244,1) 0%, rgba(141,153,174,1) 100%);
       height: 100%;
       border-radius: 4px;
 
@@ -86,7 +81,7 @@
       }
       .file-name {
         font-size: 1.25rem;
-        color: #fff;
+        color: #2B2D42;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -131,13 +126,11 @@ img {
   max-height: 100%;
   max-width: 100%;
 }
-.explorer-wrapper {
-  width: 100%;
+.upload-explorer-wrapper {
+  width:100%;
   overflow: auto;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding-left: 5%;
-  padding-top: 1rem;
   margin-top: 1rem;
 
   @media (min-width: 1281px) {
@@ -188,6 +181,6 @@ img {
     padding-left: 1rem;
     max-width: 400px;
     font-size: 0.9rem;
-    font-weight: bold;
+    font-weight: 700;
   }
 }
