--- a/ui/src/components/header.scss
+++ b/ui/src/components/header.scss
@@ -18,7 +18,7 @@
     margin-right: auto;
     color: #007ee5;
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 700;
     display: flex;
     flex-direction: row;
     align-items: center;
