--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -3,15 +3,19 @@
   grid-template-columns: 30% 70%;
   grid-column-gap: 1rem;
   align-items: start;
-  width: 100%;
   padding: 1rem;
-  @media only screen and (min-width: 1224px) {
-    grid-template-columns: 25% 75%;
-    grid-column-gap: 1rem;
-  }
   @media only screen and (min-width: 1824px) {
     grid-column-gap: 1rem;
     grid-template-columns: 15% 84%;
+  }
+  @media only screen and (min-width: 1224px) {
+    grid-template-columns: 15% 85%;
+    grid-column-gap: 1rem;
+  }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    grid-template-columns: 25% 30%;
+    grid-column-gap: 1rem;
+    border: 1px solid red;
   }
   @media only screen and (max-width: 992px) {
     grid-template-columns: 36% 64%;
@@ -44,7 +48,7 @@
   background: #fff;
   border-radius: 5px;
   // border: 3px solid #EDF2F4;
-  border: 1px solid #2B2D42;
+  // border: 1px solid #2B2D42;
   width: 100%;
   position: relative;
   .line-item-wrapper {
@@ -62,7 +66,9 @@ header.explorer-header {
   position: relative;
   margin: 0;
   // background: #EDF2F4;
-  background: #2B2D42;
+  background: #646675;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
   .header-wrapper {
     width: 100%;
     display: grid;
@@ -78,8 +84,8 @@ header.explorer-header {
     }
     list-style-type: none;
     margin: 0;
-    padding: 0.5rem 0;
-    border-bottom: 1px solid #8D99AE;
+    padding: 0.75rem 0;
+    // border-bottom: 1px solid #8D99AE;
     .header {
       text-transform: capitalize;
       font-size: 1rem;
@@ -138,8 +144,7 @@ header.explorer-header {
   border-radius: 5px;
 }
 .tree-view-wrapper {
-  // border: 1px solid #EDF2F4;
-  border: 1px solid #2B2D42;
+  // border: 1px solid #515364;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -157,11 +162,10 @@ header.explorer-header {
     width: 100%;
     margin: 0;
     margin-bottom: 1rem;
-    color: #EDF2F4;
-    padding: 0.2rem 0;
-    border-bottom: 1px solid #8D99AE;
-    // background: #EDF2F4;
-    background: #2B2D42;
+    color: #2B2D42;
+    padding: 0.4rem 0;
+    border-bottom: 1px solid #C2C7C8;
+    // background: #646675;
     span {
       padding: 0.5rem 0.5rem;
       width: 100%;
