--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -56,6 +56,7 @@
 .toolbar-buttons {
   display: grid;
   column-gap: 1rem;
+  align-self: center;
   grid-template-columns: 120px 130px 140px 400px;
   grid-template-rows: 40px;
   @media (min-width: 1025px) and (max-width: 1280px) {
@@ -78,6 +79,7 @@
 .searchbox-container-desk {
   display: block;
   width: 100%;
+  align-self: center;
   @media (min-width: 1025px) and (max-width: 1280px) {
     justify-self: right;
     width: 70%;
