--- a/ui/src/components/login.scss
+++ b/ui/src/components/login.scss
@@ -7,13 +7,14 @@
   border-radius: 5px;
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.25);
   width: 100%;
+  background: #EDF2F4;
 }
 header.app-title {
   font-size: 1.75rem;
   font-weight: 500;
   margin-bottom: 1rem;
   width: 100%;
-  background: #007ee5;
+  background: #2B2D42;
   color: #fff;
   padding: 0.75rem 0;
   border-radius: 3px;
@@ -76,7 +77,7 @@ header.app-title {
   border: none;
   border-radius: 5px;
   padding: 0.75rem;
-  background: #007ee5;
+  background: #8D99AE;
   color: #fff;
   cursor: pointer;
   margin: 0 0.5rem;
